whitespace by format-task